--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/8gRDWFTf/Matt-ID-1-1.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" style="border-radius: 50%;" />
     <title>Portfolio</title>
   </head>
   <body>
